--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -1,3 +1,3 @@
 # This file stores configurations for your Shopify app.
 
-scopes = "write_products,read_customers,write_customers,write_order_edits,write_orders"
+scopes = "write_products,read_customers,write_customers,write_order_edits,write_orders,write_draft_orders"
